--- a/test/parser/testsuite/c_cpp_mode_single.template
+++ b/test/parser/testsuite/c_cpp_mode_single.template
@@ -1,3 +1,3 @@
 <unit language="C++">
-<expr_stmt><expr><name>NAME</name></expr>;</expr_stmt>
+<expr_stmt><expr><name>${NAME}</name></expr>;</expr_stmt>
 </unit>
